fix: wrapped nav list and pushed down header

--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -1,4 +1,5 @@
 #header {
+  margin-top:3em;
   h2 {
     font-family: 'Quattrocento', serif;
     letter-spacing: 1px;
@@ -15,6 +16,9 @@
 
 ul#contact-list {
   position:fixed;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   background-color: white;
   margin: 0;
   margin-top: -24px;
